...
  onParallelSelect,
  expanded,
  setExpanded,
}: ParallelSelectorProps) {
  return (
    <EntitySelector
      title="Parallels"
      query={api.selectorOptions.getSelectorOptions}
      queryArgs={{ level: "parallel", parentId: insertId }}
      selectedId={selectedParallelId as string | null}
      onSelect={(id) => onParallelSelect(id as GenericId<"selectorOptions">)}
      expanded={expanded}
      setExpanded={setExpanded}
...
